<resources>
    <string name="app_name">EjemploTTA</string>
    <string name="login_title">Alumno de TTA</string>
    <string name="login_text">Iniciando sesion…</string>
    <string name="exercise_loading">Cargando ejercicio…</string>
    <string name="test_loading">Cargando test…</string>
    <string name="test_title">Nuevo Test</string>
    <string name="menu_title">Evaluación de TTA</string>
    <string name="exercise_title">Nuevo ejercicio</string>
    <string name="login_button">Acceder</string>
    <string name="username_label">Usuario</string>
    <string name="username_hint">Introduce DNI</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_hint">Introduce password</string>
    <string name="login_error">Login incorrecto</string>
    <string name="test_error">No se ha podido cargar el test</string>
    <string name="exercise_error">No se ha podido cargar el ejercicio</string>
    <string name="not_filled">Se han de rellenar todos los campos</string>
    <string name="not_implemented">No implementado todavia</string>
    <string name="welcome">Bienvenido</string>
    <string name="lesson">Lección</string>
    <string name="test_button">Nuevo Test</string>
    <string name="exercise_button">Nuevo Ejercicio</string>
    <string name="tracking_button">Seguimiento</string>
    <string name="upload_file_button">Subir fichero</string>
    <string name="take_photo_button">Sacar foto</string>
    <string name="record_audio_button">Grabar audio</string>
    <string name="record_video_button">Grabar video</string>
    <string name="send_button">Enviar</string>
    <string name="help_button">Ver ayuda</string>
    <string name="wrong_mime">Tipo MIME desconocido</string>
    <string name="wrong_answer">¡Has fallado!</string>
    <string name="correct_answer">¡Correcto!</string>
    <string name="no_app">No existe una app capaz de realizar dicha accion</string>
    <string name="no_camera">No hay camara</string>
    <string name="no_micro">No hay microfono</string>
    <string name="no_write_permission">La aplicacion no tiene permisos de escritura</string>
    <string name="sending_answer">Enviando respuesta…</string>
    <string name="send_ans_ok">Respuesta enviada correctamente</string>
    <string name="send_ans_error">Ha habido un error al enviar la respuesta</string>
    <string name="no_internet">La aplicacion no se puede conectar al servidor, compruebe la conexion</string>
</resources>
