<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.practica.LoginActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView android:text="@string/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/username_hint"/>

        <TextView android:text="@string/passwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/passwd"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwd_hint"/>

    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:onClick="login"/>

</LinearLayout>
